smithy-model/src/test/resources/software/amazon/smithy/model/loader/invalid/traits/traits-on-metadata.smithy
// Syntax error at line 2, column 1: Expected a namespace definition but found AT('@') | Model
@deprecated
metadata foo = "bar"
